resolved issue with overflow of label of url in the popup in recent page

--- a/MainApp/static/MainApp/recent.css
+++ b/MainApp/static/MainApp/recent.css
@@ -216,3 +216,7 @@ input[type="submit"] {
     height: 2rem;
     width: 10rem;
 }
+label {
+    word-break: break-all;
+    white-space: normal;
+}
